[gd_scene load_steps=43 format=3 uid="uid://chngrknv0vy18"]

[ext_resource type="Script" path="res://src/enemies/slime/scripts/slime.gd" id="1_6nduj"]
[ext_resource type="Texture2D" uid="uid://dr8gwpuupso51" path="res://src/enemies/slime/sprites/slime.png" id="1_xm2ry"]
[ext_resource type="Script" path="res://src/enemies/shared/enemy_state_machine.gd" id="3_l0v3b"]
[ext_resource type="Script" path="res://src/enemies/slime/scripts/slime_animations_controller.gd" id="4_1he3a"]
[ext_resource type="Script" path="res://src/enemies/slime/scripts/states/idle_state.gd" id="4_ipky7"]
[ext_resource type="Script" path="res://src/enemies/slime/scripts/states/walk_state.gd" id="5_11vw2"]
[ext_resource type="Script" path="res://src/enemies/slime/scripts/states/wander_state.gd" id="6_inij6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7wuv8"]
radius = 4.0

[sub_resource type="Animation" id="Animation_p75h8"]
resource_name = "hurt_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [63, 64, 65]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 0.717647), Color(0.882353, 0.176471, 0.517647, 0.584314), Color(1, 1, 1, 0.717647)]
}

[sub_resource type="Animation" id="Animation_t30cy"]
resource_name = "hurt_left"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [70, 71, 72]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 0.717647), Color(0.882353, 0.176471, 0.517647, 0.584314), Color(1, 1, 1, 0.717647)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_xbbhl"]
resource_name = "hurt_right"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [70, 71, 72]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 0.717647), Color(0.882353, 0.176471, 0.517647, 0.584314), Color(1, 1, 1, 0.717647)]
}

[sub_resource type="Animation" id="Animation_paxcm"]
resource_name = "hurt_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [77, 78, 79]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 0.717647), Color(0.882353, 0.176471, 0.517647, 0.584314), Color(1, 1, 1, 0.717647)]
}

[sub_resource type="Animation" id="Animation_yxdym"]
resource_name = "idle_down"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_lpyc5"]
resource_name = "idle_left"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_dyxsj"]
resource_name = "idle_right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_c4ypq"]
resource_name = "idle_up"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_12hnr"]
resource_name = "jump_down"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 24, 25, 26]
}

[sub_resource type="Animation" id="Animation_oayaa"]
resource_name = "jump_left"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 32, 33]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_8lt65"]
resource_name = "jump_right"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 32, 33]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_cg2mp"]
resource_name = "jump_up"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [35, 36, 37, 38, 39, 40]
}

[sub_resource type="Animation" id="Animation_uhotv"]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [84, 85, 86, 87, 88]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lyji0"]
_data = {
"death": SubResource("Animation_uhotv"),
"hurt_down": SubResource("Animation_p75h8"),
"hurt_left": SubResource("Animation_t30cy"),
"hurt_right": SubResource("Animation_xbbhl"),
"hurt_up": SubResource("Animation_paxcm"),
"idle_down": SubResource("Animation_yxdym"),
"idle_left": SubResource("Animation_lpyc5"),
"idle_right": SubResource("Animation_dyxsj"),
"idle_up": SubResource("Animation_c4ypq"),
"jump_down": SubResource("Animation_12hnr"),
"jump_left": SubResource("Animation_oayaa"),
"jump_right": SubResource("Animation_8lt65"),
"jump_up": SubResource("Animation_cg2mp")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_du5e8"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tgh7l"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e25em"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_h3s4w"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3s0d7"]
animation = &"idle_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_fygqi"]
blend_point_0/node = SubResource("AnimationNodeAnimation_tgh7l")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_e25em")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_h3s4w")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_3s0d7")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bggnt"]
animation = &"jump_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p5bvo"]
animation = &"jump_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_y03lv"]
animation = &"jump_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lcqxv"]
animation = &"jump_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_7316f"]
blend_point_0/node = SubResource("AnimationNodeAnimation_bggnt")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_p5bvo")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_y03lv")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_lcqxv")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wx6d2"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_syejj"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_c3uek"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_v18na"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kccdc"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_x4263"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_b7gku"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_q7itq"]
states/death/node = SubResource("AnimationNodeAnimation_du5e8")
states/death/position = Vector2(583, 122)
states/idle/node = SubResource("AnimationNodeBlendSpace2D_fygqi")
states/idle/position = Vector2(388, 167)
states/jump/node = SubResource("AnimationNodeBlendSpace2D_7316f")
states/jump/position = Vector2(388, 69)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_wx6d2"), "idle", "jump", SubResource("AnimationNodeStateMachineTransition_syejj"), "jump", "idle", SubResource("AnimationNodeStateMachineTransition_c3uek"), "jump", "death", SubResource("AnimationNodeStateMachineTransition_v18na"), "death", "jump", SubResource("AnimationNodeStateMachineTransition_kccdc"), "idle", "death", SubResource("AnimationNodeStateMachineTransition_x4263"), "death", "idle", SubResource("AnimationNodeStateMachineTransition_b7gku")]

[sub_resource type="CircleShape2D" id="CircleShape2D_cym2m"]
radius = 64.0078

[node name="Slime" type="CharacterBody2D"]
collision_layer = 256
collision_mask = 16
script = ExtResource("1_6nduj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_7wuv8")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.717647)
position = Vector2(0, -4)
texture = ExtResource("1_xm2ry")
flip_h = true
hframes = 7
vframes = 13
frame = 33

[node name="animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lyji0")
}

[node name="animator_tree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_q7itq")
anim_player = NodePath("../animator")
parameters/idle/blend_position = Vector2(0, 0)
parameters/jump/blend_position = Vector2(-0.572016, 0.224)

[node name="state_machine" type="Node" parent="."]
script = ExtResource("3_l0v3b")

[node name="idle_state" type="Node" parent="state_machine"]
script = ExtResource("4_ipky7")

[node name="walk_state" type="Node" parent="state_machine"]
script = ExtResource("5_11vw2")

[node name="wander_state" type="Node" parent="state_machine"]
script = ExtResource("6_inij6")

[node name="interactions" type="Node2D" parent="."]

[node name="agro_range" type="Area2D" parent="interactions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="interactions/agro_range"]
shape = SubResource("CircleShape2D_cym2m")
debug_color = Color(0, 0.64873, 0.170823, 0.42)

[node name="animations_controller" type="Node2D" parent="."]
script = ExtResource("4_1he3a")
